[gd_scene load_steps=8 format=1]

[ext_resource path="res://Defendiloj/Pistoloj/Kanono/Kanono.gd" type="Script" id=1]
[ext_resource path="res://Defendiloj/Pistoloj/Kanono/kanono_elektajxo.png" type="Texture" id=2]
[ext_resource path="res://Defendiloj/Pistoloj/Kanono/kanono.png" type="Texture" id=3]
[ext_resource path="res://Tiparoj/roboto.fnt" type="BitmapFont" id=4]

[sub_resource type="CircleShape2D" id=1]

custom_solver_bias = 0.0
radius = 124.772

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 32.1087, 49.3278 )

[sub_resource type="CircleShape2D" id=3]

custom_solver_bias = 0.0
radius = 661.054

[node name="Kanono" type="Node2D"]

transform/rot = -90.0
transform/scale = Vector2( 0.3, 0.3 )
script/script = ExtResource( 1 )

[node name="Kanono" type="KinematicBody2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 0.916071, 0, -176.608 )
shapes/1/trigger = false
collision/layers = 2
collision/mask = 1
collision/margin = 0.08

[node name="CollisionShape2D" type="CollisionShape2D" parent="Kanono"]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="CollisionShape2D 2" type="CollisionShape2D" parent="Kanono"]

transform/pos = Vector2( 0, -176.608 )
transform/scale = Vector2( 1, 0.916071 )
shape = SubResource( 2 )
trigger = false
_update_shape_index = 1

[node name="Elektumo" type="Sprite" parent="Kanono"]

visibility/opacity = 0.5
transform/rot = -1.77005e-13
transform/scale = Vector2( 1.15, 1.15 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Kanono"]

texture = ExtResource( 3 )

[node name="Kuglujo" type="Node2D" parent="Kanono"]

transform/pos = Vector2( 0, -230 )

[node name="Area2D" type="Area2D" parent="."]

transform/rot = 8.14222e-13
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 0 )
gravity = 0.0
linear_damp = 0.1
angular_damp = 1.0
collision/layers = 2
collision/mask = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

shape = SubResource( 3 )
trigger = true
_update_shape_index = 0

[node name="Fiksata" type="Node2D" parent="."]

[node name="Nivelo" type="Label" parent="."]

rect/rotation = 90.0
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -38.0
margin/top = 17.0
margin/right = 2.0
margin/bottom = 94.0
custom_fonts/font = ExtResource( 4 )
text = "0"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="input_event" from="Kanono" to="." method="_on_Kanono_input_event"]

[connection signal="body_enter" from="Area2D" to="." method="_on_Area2D_body_enter"]

[connection signal="body_exit" from="Area2D" to="." method="_on_Area2D_body_exit"]


